Fixed submit input z-index within form content styles

--- a/app/assets/stylesheets/new_common/form-content.css.scss
+++ b/app/assets/stylesheets/new_common/form-content.css.scss
@@ -158,7 +158,7 @@
   height: 28px;
   padding: 0 18px;
   background: none;
-  z-index: 1;
+  z-index: 2;
 }
 .Form-inputIcon {
   position: absolute;
